[project]
name = "pdf-parser-api"
version = "0.1.0"
description = "Extract clean Markdown, structured metadata, and references from research paper PDFs. FastAPI-ready parsing backend for AI research applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.2",
]
