[project]
name = "pdf-parser-api"
version = "0.1.0"
description = "Extract clean Markdown, structured metadata, and references from research paper PDFs. FastAPI-ready parsing backend for AI research applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "langchain-anthropic>=0.3.12",
    "langchain-deepseek>=0.1.3",
    "langchain-google-genai>=2.1.3",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.14",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.2",
]
